Revision history for Bits

{{$NEXT}}

0.0.6  2021-11-07T11:57:35+01:00
    - Remove actual module specification, we don't need it

0.0.5  2021-09-08T13:18:02+02:00
    - Change module extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address

0.0.4  2020-12-13T23:57:26+01:00
    - Use the highest possible Raku version
    - Fix some typos in the pod

0.0.3  2020-07-12T23:08:32+02:00
    - Add "bitswap" sub for swapping all bits.
    - Provide full support for negative values for all subs.
    - Speed up by using NQP ops only.

0.0.2  2019-01-12T00:17:25+01:00
    - Adapt documentation: negative values are also ok.

0.0.1  2019-01-12T00:06:18+01:00
    - Initial version.