@@ -18,6 +18,7 @@
   ],
   "source-url": "https://github.com/lizmat/Bits.git",
   "tags": [
+    "BITWISE",
     "UTILS"
   ],
   "test-depends": [
