@@ -2,9 +2,14 @@ name = Bits
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Bits.rakumod
+filename = doc/Bits.rakudoc
 
 [PruneFiles]
 ; match = ^ 'xt/'
 
 [UploadToZef]
+
+[Badges]
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
